--- a/src/content/docs/guides/intro.mdx
+++ b/src/content/docs/guides/intro.mdx
@@ -1,6 +1,6 @@
 ---
 title: Intro to reportifyr
-description: A introduction to reportifyr.
+description: An introduction to reportifyr.
 pagefind: true
 ---
 
