--- a/src/content/docs/reference/reportifyr.mdx
+++ b/src/content/docs/reference/reportifyr.mdx
@@ -10,10 +10,22 @@ import { Steps } from '@astrojs/starlight/components';
 `reportifyr` has six main classes of functions for its use in the reporting process:
 
 <Steps>
-1. [Setup](/reportifyr_docs/reference/setup/setup) - these functions are needed to setup the reportifyr package.
-2. [Exporting](/reportifyr_docs/reference/exporting/exporting) - these functions export report artifacts.
-3. [Metadata](/reportifyr_docs/reference/metadata/metadata) - these functions create or modify artifact metadata.
-4. [Document Interacting](/reportifyr_docs/reference/document_interacting/document_interacting) - these functions add or remove artifacts and footnotes. 
-5. [Report Building](/reportifyr_docs/reference/report_building/report_building) - these functions build and finalize reports.
-6. [Utilities](/reportifyr_docs/reference/utilities/utilities) - these functions generate prediction plots.
+1. <a href={`${import.meta.env.BASE_URL}/reference/setup/setup/`}>
+     Setup
+   </a> – these functions are needed to setup the reportifyr package.
+2. <a href={`${import.meta.env.BASE_URL}/reference/exporting/exporting/`}>
+     Exporting
+   </a> – these functions export report artifacts.
+3. <a href={`${import.meta.env.BASE_URL}/reference/metadata/metadata/`}>
+     Metadata
+   </a> – these functions create or modify artifact metadata.
+4. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/document_interacting/`}>
+     Document Interacting
+   </a> – these functions add or remove artifacts and footnotes. 
+5. <a href={`${import.meta.env.BASE_URL}/reference/report_building/report_building/`}>
+     Report Building
+   </a> – these functions build and finalize reports.
+6. <a href={`${import.meta.env.BASE_URL}/reference/utilities/utilities/`}>
+     Utilities
+   </a> – these functions help in using the reportifyr package.
 </Steps>
