--- a/src/content/docs/reference/report_building/report_building.mdx
+++ b/src/content/docs/reference/report_building/report_building.mdx
@@ -8,6 +8,6 @@ import { Steps } from '@astrojs/starlight/components';
 ## reportifyr Report Building Functions
 
 <Steps>
-1. [`build_report`](/reportifyr_docs/reference/report_building/build_report)
-2. [`finalize_document`](/reportifyr_docs/reference/report_building/finalize_document)
+1. <a href={`${import.meta.env.BASE_URL}/reference/report_building/build_report/`}>build_report</a>
+2. <a href={`${import.meta.env.BASE_URL}/reference/report_building/finalize_document/`}>finalize_document</a>
 </Steps>
