--- a/src/content/docs/reference/setup/initialize_report_project.mdx
+++ b/src/content/docs/reference/setup/initialize_report_project.mdx
@@ -55,4 +55,4 @@ If a `.venv` is not found in the `project_dir`, it initializes one using `initia
 ## Additional Resources
 
 - **reportifyr GitHub**: Refer to the `reportifyr` [repository](https://github.com/A2-ai/reportifyr) for more details. 
-- **Initialize Python Reference**: Refer to the reference on `initialize_python()` [here](/reportifyr_docs/reference/setup/initialize_python).
+- **Initialize Python Reference**: Refer to the reference on `initialize_python()` <a href={`${import.meta.env.BASE_URL}/reference/setup/initialize_python/`}>here</a>.
