--- a/src/content/docs/reference/utilities/utilities.mdx
+++ b/src/content/docs/reference/utilities/utilities.mdx
@@ -8,7 +8,7 @@ import { Steps } from '@astrojs/starlight/components';
 ## reportifyr Utilities Functions
 
 <Steps>
-1. [`make_doc_dirs`](/reportifyr_docs/reference/utilities/make_doc_dirs)
-2. [`validate_object`](/reportifyr_docs/reference/utilities/validate_object)
-3. [`toggle_logger`](/reportifyr_docs/reference/utilities/toggle_logger)
+1. <a href={`${import.meta.env.BASE_URL}/reference/utilities/make_doc_dirs/`}>make_doc_dirs</a>
+2. <a href={`${import.meta.env.BASE_URL}/reference/utilities/validate_object/`}>validate_object</a>
+3. <a href={`${import.meta.env.BASE_URL}/reference/utilities/toggle_logger/`}>toggle_logger</a>
 </Steps>
