--- a/src/content/docs/guides/intro.mdx
+++ b/src/content/docs/guides/intro.mdx
@@ -20,18 +20,18 @@ of traceable and consistent Microsoft Word documents (reports).
 `reportifyr` currently operates across two key stages in the reporting process: 
 
 <Steps>
-1. [Performing Analyses](/reportifyr_docs/guides/performing_analyses) - Perform an analysis and use `reportifyr` to save artifacts for report drafting.
-2. [Drafting Reports](/reportifyr_docs/guides/drafting_reports) - Draft a report and use `reportifyr` to insert artifacts and footnotes.
+1. <a href={`${import.meta.env.BASE_URL}/guides/performing_analyses/`}>Performing Analyses</a> – Perform an analysis and use `reportifyr` to save artifacts for report drafting.
+2. <a href={`${import.meta.env.BASE_URL}/guides/drafting_reports/`}>Drafting Reports</a> - Draft a report and use `reportifyr` to insert artifacts and footnotes.
 </Steps>
 
 In addition to the two process guides, `reportifyr` currently offers a few more 
 guides to help users:
 
 <Steps>
-1. [Initializing Reportifyr](/reportifyr_docs/guides/intializing_reportifyr) - Configure and setup `reportifyr`.
-2. [A Streamlined Workflow](/reportifyr_docs/guides/streamlined_workflow) - Build a report with two quick `reportifyr` functions.
-3. [Updating Reports](/reportifyr_docs/guides/updating_reports) - Update a report's artifacts with `reportifyr`. 
-4. [Elective Footnotes](/reportifyr_docs/guides/elective_footnotes) - Learn how to include or exclude footnotes with `reportifyr`.
+1. <a href={`${import.meta.env.BASE_URL}/guides/intializing_reportifyr/`}>Initializing Reportifyr</a> - Configure and setup `reportifyr`.
+2. <a href={`${import.meta.env.BASE_URL}/guides/streamlined_workflow/`}> - Build a report with two quick `reportifyr` functions.
+3. <a href={`${import.meta.env.BASE_URL}/guides/updating_reports/`}> - Update a report's artifacts with `reportifyr`. 
+4. <a href={`${import.meta.env.BASE_URL}/guides/elective_footnotes/`}> - Learn how to include or exclude footnotes with `reportifyr`.
 </Steps>
 
 ## Why use `reportifyr`?
@@ -42,57 +42,57 @@ assurance burden.
 
 ## Using `reportifyr`
 
-Head over to the [new user guide](/reportifyr_docs/guides/new_user_guide) for your 
-first time use of `reportifyr` or check out our function-specific references for 
+Head over to the <a href={`${import.meta.env.BASE_URL}/guides/new_user_guide/`}>new user guide</a>
+for your first time use of `reportifyr` or check out our function-specific references for 
 detailed insights and advanced tips:
 
 ### Setup
 
 <Steps>
-1. [Initialize Python](/reportifyr_docs/reference/setup/initialize_python) - Reference for using the `initialize_python()` function to create a Python virtual environment.
-2. [Initialize Report Project](/reportifyr_docs/reference/setup/initialize_report_project) - Reference for using the `initialize_report_project()` function to create a project directory structure for reports.
+1. <a href={`${import.meta.env.BASE_URL}/reference/setup/initialize_python/`}>Initialize Python</a> - Reference for using the `initialize_python()` function to create a Python virtual environment.
+2. <a href={`${import.meta.env.BASE_URL}/reference/setup/initialize_report_project/`}>Initialize Report Project</a> - Reference for using the `initialize_report_project()` function to create a project directory structure for reports.
 </Steps>
 
 ### Exporting
 
 <Steps>
-1. [Format Flextable](/reportifyr_docs/reference/exporting/format_flextable) - Reference for using the `format_flextable()` function to style data frames or flextable objects.
-2. [ggsave with Metadata](/reportifyr_docs/reference/exporting/ggsave_with_metadata) - Reference for using the `ggsave_with_metadata()` function to save plots and capture metadata.
-3. [Save RDS with Metadata](/reportifyr_docs/reference/exporting/save_rds_with_metadata) - Reference for using the `save_rds_with_metadata()` function to save R objects and capture metadata.
-4. [Write CSV with Metadata](/reportifyr_docs/reference/exporting/write_csv_with_metadata) - Reference for using the `write_csv_with_metadata()` function to save data objects and capture metadata.
+1. <a href={`${import.meta.env.BASE_URL}/reference/exporting/format_flextable/`}>Format Flextable</a> - Reference for using the `format_flextable()` function to style data frames or flextable objects.
+2. <a href={`${import.meta.env.BASE_URL}/reference/exporting/ggsave_with_metadata/`}>ggsave with Metadata</a> - Reference for using the `ggsave_with_metadata()` function to save plots and capture metadata.
+3. <a href={`${import.meta.env.BASE_URL}/reference/exporting/save_rds_with_metadata/`}>Save RDS with Metadata</a> - Reference for using the `save_rds_with_metadata()` function to save R objects and capture metadata.
+4. <a href={`${import.meta.env.BASE_URL}/reference/exporting/write_csv_with_metadata/`}>Write CSV with Metadata</a> - Reference for using the `write_csv_with_metadata()` function to save data objects and capture metadata.
 </Steps>
 
 ### Metadata
 
 <Steps>
-1. [Get Meta Abbreviations](/reportifyr_docs/reference/metadata/get_meta_abbrevs) - Reference for using the `get_meta_abbrevs()` function to standardize artifact footnotes.
-2. [Get Meta Type](/reportifyr_docs/reference/metadata/get_meta_type) - Reference for using the `get_meta_type()` function to standardize artifact footnotes.
-3. [Preview Metadata](/reportifyr_docs/reference/metadata/preview_metadata) - Reference for using the `preview_metadata()` function to preview metadata for a specific file.
-4. [Preview Metadata Files](/reportifyr_docs/reference/metadata/preview_metadata_files) - Reference for using the `preview_metadata_files()` function to preview metadata `.json` files in a directory.
-5. [Update Object Footnotes](/reportifyr_docs/reference/metadata/update_object_footnotes) - Reference for using the `update_object_footnotes()` function to modify or add footnote metadata for an object.
-6. [Write Object Metadata](/reportifyr_docs/reference/metadata/write_object_metadata) - Reference for using the `write_object_metadata()` function to generate metadata for an object and save it as a `.json` file.
+1. <a href={`${import.meta.env.BASE_URL}/reference/metadata/get_meta_abbrevs/`}>Get Meta Abbreviations</a> - Reference for using the `get_meta_abbrevs()` function to standardize artifact footnotes.
+2. <a href={`${import.meta.env.BASE_URL}/reference/metadata/get_meta_type/`}>Get Meta Type</a> - Reference for using the `get_meta_type()` function to standardize artifact footnotes.
+3. <a href={`${import.meta.env.BASE_URL}/reference/metadata/preview_metadata/`}>Preview Metadata</a> - Reference for using the `preview_metadata()` function to preview metadata for a specific file.
+4. <a href={`${import.meta.env.BASE_URL}/reference/metadata/preview_metadata_files/`}>Preview Metadata Files</a> - Reference for using the `preview_metadata_files()` function to preview metadata `.json` files in a directory.
+5. <a href={`${import.meta.env.BASE_URL}/reference/metadata/update_object_footnotes/`}>Update Object Footnotes</a> - Reference for using the `update_object_footnotes()` function to modify or add footnote metadata for an object.
+6. <a href={`${import.meta.env.BASE_URL}/reference/metadata/write_object_metadata/`}>Write Object Metadata</a> - Reference for using the `write_object_metadata()` function to generate metadata for an object and save it as a `.json` file.
 </Steps>
 
 ### Document Interacting
 
 <Steps>
-1. [Add Footnotes](/reportifyr_docs/reference/document_interacting/add_footnotes) - Reference for using the `add_footnotes()` function to insert footnotes into a Microsoft Word document.
-2. [Add Plots](/reportifyr_docs/reference/document_interacting/add_plots) - Reference for using the `add_plots()` function to insert figures into a Microsoft Word document.
-3. [Add Tables](/reportifyr_docs/reference/document_interacting/add_tables) - Reference for using the `add_tables()` function to insert tables into a Microsoft Word document.
-4. [Remove Tables, Figures, and Footnotes](/reportifyr_docs/reference/document_interacting/remove_tables_figures_footnotes) - Reference for using the `remove_tables_figures_footnotes()` function to remove tables, figures, and footnotes from a Microsoft Word document.
+1. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/add_footnotes/`}>Add Footnotes</a> - Reference for using the `add_footnotes()` function to insert footnotes into a Microsoft Word document.
+2. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/add_plots/`}>Add Plots</a> - Reference for using the `add_plots()` function to insert figures into a Microsoft Word document.
+3. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/add_tables/`}>Add Tables</a> - Reference for using the `add_tables()` function to insert tables into a Microsoft Word document.
+4. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/remove_tables_figures_footnotes/`}>Remove Tables, Figures & Footnotes</a> - Reference for using the `remove_tables_figures_footnotes()` function to remove tables, figures, and footnotes from a Microsoft Word document.
 </Steps>
 
 ### Report Building
 
 <Steps>
-1. [Build Report](/reportifyr_docs/reference/report_building/build_report) - Reference for using the `build_report()` function to build or update a Microsoft Word document.
-2. [Finalize Document](/reportifyr_docs/reference/report_building/finalize_document) - Reference for using the `finalize_document()` function to finalize a Microsoft Word document.
+1. <a href={`${import.meta.env.BASE_URL}/reference/report_building/build_report/`}>Build Report</a> - Reference for using the `build_report()` function to build or update a Microsoft Word document.
+2. <a href={`${import.meta.env.BASE_URL}/reference/report_building/finalize_document/`}>Finalize Document</a> - Reference for using the `finalize_document()` function to finalize a Microsoft Word document.
 </Steps>
 
 ### Utilities
 
 <Steps>
-1. [Make Document Directories](/reportifyr_docs/reference/utilities/make_doc_dirs) - Reference for using the `make_doc_dirs()` function to define paths for intermediate and final Microsoft Word documents.
-2. [Validate Object](/reportifyr_docs/reference/utilities/validate_object) - Reference for using the `validate_object()` function to define paths for intermediate and final Microsoft Word documents.
-3. [Toggle Logger](/reportifyr_docs/reference/utilities/toggle_logger) - Reference for using the `toggle_logger()` function to set the logging level.
+1. <a href={`${import.meta.env.BASE_URL}/reference/utilities/make_doc_dirs/`}>Make Document Directories</a> - Reference for using the `make_doc_dirs()` function to define paths for intermediate and final Microsoft Word documents.
+2. <a href={`${import.meta.env.BASE_URL}/reference/utilities/validate_object/`}>Validate Object</a> - Reference for using the `validate_object()` function to define paths for intermediate and final Microsoft Word documents.
+3. <a href={`${import.meta.env.BASE_URL}/reference/utilities/toggle_logger/`}>Toggle Logger</a> - Reference for using the `toggle_logger()` function to set the logging level.
 </Steps>
