--- a/src/content/docs/reference/document_interacting/document_interacting.mdx
+++ b/src/content/docs/reference/document_interacting/document_interacting.mdx
@@ -8,8 +8,8 @@ import { Steps } from '@astrojs/starlight/components';
 ## reportifyr Document Interacting Functions
 
 <Steps>
-1. [`add_footnotes`](/reportifyr_docs/reference/document_interacting/add_footnotes)
-2. [`add_plots`](/reportifyr_docs/reference/document_interacting/add_plots)
-3. [`add_tables`](/reportifyr_docs/reference/document_interacting/add_tables)
-4. [`remove_tables_figures_footnotes`](/reportifyr_docs/reference/document_interacting/remove_tables_figures_footnotes)
+1. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/add_footnotes/`}>add_footnotes</a>
+2. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/add_plots/`}>add_plots</a>
+3. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/add_tables/`}>add_tables</a>
+4. <a href={`${import.meta.env.BASE_URL}/reference/document_interacting/remove_tables_figures_footnotes/`}>remove_tables_figures_footnotes</a>
 </Steps>
