--- a/src/content/docs/reference/exporting/exporting.mdx
+++ b/src/content/docs/reference/exporting/exporting.mdx
@@ -8,8 +8,8 @@ import { Steps } from '@astrojs/starlight/components';
 ## `reportifyr` Export Functions
 
 <Steps>
-1. [`format_flextable`](/reportifyr_docs/reference/exporting/format_flextable)
-2. [`ggsave_with_metadata`](/reportifyr_docs/reference/exporting/ggsave_with_metadata)
-3. [`save_rds_with_metadata`](/reportifyr_docs/reference/exporting/save_rds_with_metadata)
-4. [`write_csv_with_metadata`](/reportifyr_docs/reference/exporting/write_csv_with_metadata)
+1. <a href={`${import.meta.env.BASE_URL}/reference/exporting/format_flextable/`}>format_flextable</a>
+2. <a href={`${import.meta.env.BASE_URL}/reference/exporting/ggsave_with_metadata/`}>ggsave_with_metadata</a>
+3. <a href={`${import.meta.env.BASE_URL}/reference/exporting/save_rds_with_metadata/`}>save_rds_with_metadata</a>
+4. <a href={`${import.meta.env.BASE_URL}/reference/exporting/write_csv_with_metadata/`}>write_csv_with_metadata</a>
 </Steps>
