--- a/src/content/docs/reference/exporting/save_rds_with_metadata.mdx
+++ b/src/content/docs/reference/exporting/save_rds_with_metadata.mdx
@@ -42,4 +42,4 @@ If the source file is not tracked by Git, a similar warning is displayed:
 
 - **reportifyr GitHub**: Refer to the `reportifyr` [repository](https://github.com/A2-ai/reportifyr) for more details. 
 - **saveRDS Documentation**: Refer to the `saveRDS()` [function](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/readRDS) for additional arguments to pass to `save_rds_with_metadata()`.
-- **Write Object Metadata Reference**: Refer to the reference on `write_object_metadata()` [here](/reportifyr_docs/reference/metadata/write_object_metadata).
+- **Write Object Metadata Reference**: Refer to the reference on `write_object_metadata()` <a href={`${import.meta.env.BASE_URL}/reference/metadata/write_object_metadata/`}>here</a>.
