--- a/src/content/docs/reference/metadata/metadata.mdx
+++ b/src/content/docs/reference/metadata/metadata.mdx
@@ -8,10 +8,10 @@ import { Steps } from '@astrojs/starlight/components';
 ## `reportifyr` Metadata Functions
 
 <Steps>
-1. [`get_meta_abbrevs`](/reportifyr_docs/reference/metadata/get_meta_abbrevs)
-2. [`get_meta_type`](/reportifyr_docs/reference/metadata/get_meta_type)
-3. [`preview_metadata`](/reportifyr_docs/reference/metadata/preview_metadata)
-4. [`preview_metadata_files`](/reportifyr_docs/reference/metadata/preview_metadata_files)
-5. [`update_object_footnotes`](/reportifyr_docs/reference/metadata/update_object_footnotes)
-6. [`write_object_metadata`](/reportifyr_docs/reference/metadata/write_object_metadata)
+1. <a href={`${import.meta.env.BASE_URL}/reference/metadata/get_meta_abbrevs/`}>get_meta_abbrevs</a>
+2. <a href={`${import.meta.env.BASE_URL}/reference/metadata/get_meta_type/`}>get_meta_type</a>
+3. <a href={`${import.meta.env.BASE_URL}/reference/metadata/preview_metadata/`}>preview_metadata</a>
+4. <a href={`${import.meta.env.BASE_URL}/reference/metadata/preview_metadata_files/`}>preview_metadata_files</a>
+5. <a href={`${import.meta.env.BASE_URL}/reference/metadata/update_object_footnotes/`}>update_object_footnotes</a>
+6. <a href={`${import.meta.env.BASE_URL}/reference/metadata/write_object_metadata/`}>write_object_metadata</a>
 </Steps>
