--- a/src/content/docs/reference/metadata/update_object_footnotes.mdx
+++ b/src/content/docs/reference/metadata/update_object_footnotes.mdx
@@ -44,4 +44,4 @@ The metadata associated with the specified file does not exist: /cluster-data/us
 
 - **reportifyr GitHub**: Refer to the `reportifyr` [repository](https://github.com/A2-ai/reportifyr) for more details.
 - **JSON Documentation**: Learn more about `JSON` structure and syntax [here](https://www.json.org/json-en.html).
-- **Get Meta Abbreviations Reference**: Refer to the reference on `get_meta_abbrevs()` [here](/reportifyr_docs/guides/metadata/get_meta_abbrevs).
+- **Get Meta Abbreviations Reference**: Refer to the reference on `get_meta_abbrevs()` <a href={`${import.meta.env.BASE_URL}/reference/metadata/get_meta_abbrevs/`}>here</a>.
