--- a/src/content/docs/reference/setup/setup.mdx
+++ b/src/content/docs/reference/setup/setup.mdx
@@ -8,6 +8,6 @@ import { Steps } from '@astrojs/starlight/components';
 ## `reportifyr` Setup Functions
 
 <Steps>
-1. [`initialize_report_project`](/reportifyr_docs/reference/setup/initialize_report_project)
-2. [`initialize_python`](/reportifyr_docs/reference/setup/initialize_python)
+1. <a href={`${import.meta.env.BASE_URL}/reference/setup/initialize_report_project/`}>initialize_report_project</a>
+2. <a href={`${import.meta.env.BASE_URL}/reference/setup/initialize_python/`}>initialize_python</a>
 </Steps>
