--- a/src/content/docs/guides/intro.mdx
+++ b/src/content/docs/guides/intro.mdx
@@ -29,9 +29,9 @@ guides to help users:
 
 <Steps>
 1. <a href={`${import.meta.env.BASE_URL}/guides/intializing_reportifyr/`}>Initializing Reportifyr</a> - Configure and setup `reportifyr`.
-2. <a href={`${import.meta.env.BASE_URL}/guides/streamlined_workflow/`}> - Build a report with two quick `reportifyr` functions.
-3. <a href={`${import.meta.env.BASE_URL}/guides/updating_reports/`}> - Update a report's artifacts with `reportifyr`. 
-4. <a href={`${import.meta.env.BASE_URL}/guides/elective_footnotes/`}> - Learn how to include or exclude footnotes with `reportifyr`.
+2. <a href={`${import.meta.env.BASE_URL}/guides/streamlined_workflow/`}>Streamlined Workflow</a> - Build a report with two quick `reportifyr` functions.
+3. <a href={`${import.meta.env.BASE_URL}/guides/updating_reports/`}>Updating Reports</a> - Update a report's artifacts with `reportifyr`. 
+4. <a href={`${import.meta.env.BASE_URL}/guides/elective_footnotes/`}>Elective Footnotes</a> - Learn how to include or exclude footnotes with `reportifyr`.
 </Steps>
 
 ## Why use `reportifyr`?
