--- a/src/content/docs/guides/drafting_reports.mdx
+++ b/src/content/docs/guides/drafting_reports.mdx
@@ -33,7 +33,7 @@ In <a href={`${import.meta.env.BASE_URL}/guides/performing_analyses/`}>Performin
 we saved two figures and two tables to be inserted into a report. 
 
 The [template report](https://github.com/A2-ai/reportifyr/blob/v0.2.6/inst/extdata/template.docx) 
-report packaged with `reportifyr`, already includes the appropriate artifact captions 
+packaged with `reportifyr`, already includes the appropriate artifact captions 
 and associated magic strings required for these two figures and tables. Feel free 
 to take a look at the template before we start populating it!
 
