--- a/src/content/docs/guides/drafting_reports.mdx
+++ b/src/content/docs/guides/drafting_reports.mdx
@@ -32,7 +32,7 @@ to ensure full functionality of `reportifyr`.
 In <a href={`${import.meta.env.BASE_URL}/guides/performing_analyses/`}>Performing Analyses</a>, 
 we saved two figures and two tables to be inserted into a report. 
 
-The [template report](https://github.com/A2-ai/reportifyr/blob/v0.2.6/inst/extdata/template.docx) 
+The [template report](https://github.com/A2-ai/reportifyr/blob/v0.3.1/inst/extdata/template.docx) 
 packaged with `reportifyr`, already includes the appropriate artifact captions 
 and associated magic strings required for these two figures and tables. Feel free 
 to take a look at the template before we start populating it!
@@ -45,6 +45,8 @@ which contains no figures or tables inserted by `reportifyr`.
 ### Making Document Directories
 
 ```r
+library(reportifyr)
+
 docx_shell <- here::here("report", "shell", "template.docx")
 doc_dirs <- make_doc_dirs(docx_in = docx_shell)
 ```
@@ -80,11 +82,13 @@ We can begin by inserting the tables:
 
 ```r
 tables_path <- here::here("OUTPUTS", "tables")
+config_yaml <- here::here("report", "config.yaml")
 
 add_tables(
   docx_in = doc_dirs$doc_in,
   docx_out = doc_dirs$doc_tables,
-  tables_path = tables_path
+  tables_path = tables_path,
+  config_yaml = config_yaml
 )
 ```
 
@@ -102,7 +106,8 @@ figures_path <- here::here("OUTPUTS", "figures")
 add_plots(
   docx_in = doc_dirs$doc_tables,
   docx_out = doc_dirs$doc_tabs_figs,
-  figures_path = figures_path
+  figures_path = figures_path,
+  config_yaml = config_yaml
 )
 ```
 
@@ -122,7 +127,8 @@ add_footnotes(
   docx_out = doc_dirs$doc_draft,
   figures_path = figures_path,
   tables_path = tables_path,
-  standard_footnotes_yaml = standard_footnotes_yaml
+  standard_footnotes_yaml = standard_footnotes_yaml,
+  config_yaml = config_yaml
 )
 ```
 
@@ -141,7 +147,8 @@ using this function:
 ```r
 finalize_document(
   docx_in = doc_dirs$doc_draft,
-  docx_out = doc_dirs$doc_final
+  docx_out = doc_dirs$doc_final,
+  config_yaml = config_yaml
 )
 ```
 
