--- a/src/content/docs/reference/utilities/utilities.mdx
+++ b/src/content/docs/reference/utilities/utilities.mdx
@@ -11,4 +11,8 @@ import { Steps } from '@astrojs/starlight/components';
 1. <a href={`${import.meta.env.BASE_URL}/reference/utilities/make_doc_dirs/`}>make_doc_dirs</a>
 2. <a href={`${import.meta.env.BASE_URL}/reference/utilities/validate_object/`}>validate_object</a>
 3. <a href={`${import.meta.env.BASE_URL}/reference/utilities/toggle_logger/`}>toggle_logger</a>
+4. <a href={`${import.meta.env.BASE_URL}/reference/utilities/get_venv_uv_paths/`}>get_venv_uv_paths</a>
+5. <a href={`${import.meta.env.BASE_URL}/reference/utilities/validate_alt_text_magic_strings/`}>validate_alt_text_magic_strings</a>
+6. <a href={`${import.meta.env.BASE_URL}/reference/utilities/validate_config/`}>validate_config</a>
+7. <a href={`${import.meta.env.BASE_URL}/reference/utilities/validate_docx/`}>validate_docx</a>
 </Steps>
