Revert "slight editorial fixes"
This reverts commit 91361d720dae9cd12d666e18c30e15211a82204d.

reverting

--- a/src/content/docs/guides/drafting_reports.mdx
+++ b/src/content/docs/guides/drafting_reports.mdx
@@ -32,8 +32,8 @@ to ensure full functionality of `reportifyr`.
 In <a href={`${import.meta.env.BASE_URL}/guides/performing_analyses/`}>Performing Analyses</a>, 
 we saved two figures and two tables to be inserted into a report. 
 
-The [template report](https://github.com/A2-ai/reportifyr/blob/v0.3.1/inst/extdata/template.docx) 
-packaged with `reportifyr`, already includes the appropriate artifact captions 
+The [template report](https://github.com/A2-ai/reportifyr/blob/v0.2.6/inst/extdata/template.docx) 
+report packaged with `reportifyr`, already includes the appropriate artifact captions 
 and associated magic strings required for these two figures and tables. Feel free 
 to take a look at the template before we start populating it!
 
